Implement authentication and database setup with Better Auth and Prisma. Added mobile app structure with login and registration screens, integrated Google sign-in, and configured environment variables. Updated package dependencies and added Docker support for PostgreSQL database.

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -5,17 +5,19 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "scheme": "prop-track",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.prop-track.prop-track"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.prop_track.prop_track"
     },
     "web": {
       "bundler": "metro",
@@ -32,10 +34,27 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      [
+				"expo-build-properties",
+				{
+					"ios": {
+						"useFrameworks": "static"
+					}
+				}
+      ],
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "65ba07e5-ab8f-4794-b711-2a559d7e0a7e"
+      }
     }
   }
 }
