--- a/turbo.json
+++ b/turbo.json
@@ -15,6 +15,19 @@
             ],
             "cache": false,
             "persistent": true
+        },
+        "db:generate": {
+            "cache": false
+        },
+        "db:migrate": {
+            "cache": false,
+            "persistent": true
+        },
+        "db:deploy": {
+            "cache": false
+        },
+        "db:run": {
+            "cache": false
         }
     }
 }
