--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,7 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "common": "workspace:*",
+    "@prop-track/database": "workspace:*",
+    "better-auth": "^1.2.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2"
@@ -30,6 +31,7 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "tsconfig": "workspace:*"
   }
 }
