Implement property management features in backend and mobile apps. Added property CRUD operations, integrated authentication middleware, and established API communication. Updated package dependencies and added TypeScript type definitions for Express. Enhanced mobile app with property listing and creation functionalities using React Query.

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -6,6 +6,8 @@
     "types": "dist/index.d.ts",
     "scripts": {
         "build": "tsc",
+        "dev": "tsc --watch",
+        "clean": "rm -rf dist",
         "db:generate": "prisma generate",
         "db:migrate": "prisma migrate dev --skip-generate",
         "db:push": "prisma db push",
