--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@prop-track/database": "workspace:*",
+    "@prop-track/auth": "workspace:*",
     "better-auth": "^1.2.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
