--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -17,11 +17,13 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.26.10",
-    "@prop-track/database": "workspace:*",
     "@better-auth/expo": "^1.2.4",
     "@expo/vector-icons": "^14.0.2",
+    "@prop-track/database": "workspace:*",
+    "@prop-track/api": "workspace:*",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@tanstack/react-query": "^5.68.0",
     "better-auth": "^1.2.4",
     "common": "workspace:*",
     "expo": "~52.0.37",
