--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -19,10 +19,18 @@
     "@babel/runtime": "^7.26.10",
     "@better-auth/expo": "^1.2.4",
     "@expo/vector-icons": "^14.0.2",
-    "@prop-track/database": "workspace:*",
+    "@hookform/resolvers": "^4.1.3",
     "@prop-track/api": "workspace:*",
+    "@prop-track/database": "workspace:*",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@tamagui/babel-plugin": "^1.90.2",
+    "@tamagui/config": "^1.90.2",
+    "@tamagui/core": "^1.90.2",
+    "@tamagui/font-inter": "^1.90.2",
+    "@tamagui/lucide-icons": "^1.125.26",
+    "@tamagui/shorthands": "^1.90.2",
+    "@tamagui/themes": "^1.90.2",
     "@tanstack/react-query": "^5.68.0",
     "better-auth": "^1.2.4",
     "common": "workspace:*",
@@ -43,14 +51,18 @@
     "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg-transformer": "^1.5.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "tamagui": "^1.125.26",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -58,6 +70,7 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "babel-plugin-module-resolver": "^5.0.2",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.4",
     "react-test-renderer": "18.3.1",
