(mobile): Update Tamagui dependencies and refactor mobile app components. Added new versions of '@tamagui/colors' and '@tamagui/theme-builder'. Streamlined UI components in the dashboard and property details pages for improved user experience. Enhanced property creation form with better styling and validation. Updated spinner color in property details for consistency.

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -25,11 +25,13 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@tamagui/babel-plugin": "^1.90.2",
+    "@tamagui/colors": "^1.125.31",
     "@tamagui/config": "^1.90.2",
     "@tamagui/core": "^1.90.2",
     "@tamagui/font-inter": "^1.90.2",
     "@tamagui/lucide-icons": "^1.125.26",
     "@tamagui/shorthands": "^1.90.2",
+    "@tamagui/theme-builder": "^1.125.31",
     "@tamagui/themes": "^1.90.2",
     "@tanstack/react-query": "^5.68.0",
     "better-auth": "^1.2.4",
