Enhance backend and mobile applications with property management features. Added '@prop-track/types' dependency for type definitions. Updated property model to include notes, value, and location. Refactored property service methods for improved data handling. Enhanced property creation form in mobile app with additional fields for notes, value, and location selection. Streamlined API communication for property operations.

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -112,6 +112,8 @@
     "typeRoots": [
       "src/@types",
       "node_modules/@types",
-    ]
+    ],
+    "outDir": "./dist",
+    "rootDir": "./src",
   }
 }
