--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -19,7 +19,8 @@
     "better-auth": "^1.2.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "@prop-track/types": "workspace:*"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
