--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,7 +14,8 @@
         "@prop-track/database": "workspace:*",
         "axios": "^1.6.7",
         "@prop-track/auth": "workspace:*",
-        "dotenv": "^16.4.5"
+        "dotenv": "^16.4.5",
+        "@prop-track/types": "workspace:*"
     },
     "devDependencies": {
         "@types/node": "^22.13.11",
