--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,18 +14,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prop-track/database": "workspace:*",
     "@prop-track/auth": "workspace:*",
+    "@prop-track/database": "workspace:*",
+    "@prop-track/types": "workspace:*",
     "better-auth": "^1.2.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "@prop-track/types": "workspace:*"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.12",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.10",
     "@types/supertest": "^6.0.2",
     "jest": "^29.2.1",
@@ -33,7 +35,7 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "tsconfig": "workspace:*"
+    "tsconfig": "workspace:*",
+    "typescript": "^5.3.3"
   }
 }
