Switch to nativewind and RNR

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -36,14 +36,15 @@
         }
       ],
       [
-				"expo-build-properties",
-				{
-					"ios": {
-						"useFrameworks": "static"
-					}
-				}
+        "expo-build-properties",
+        {
+          "ios": {
+            "useFrameworks": "static"
+          }
+        }
       ],
-      "expo-secure-store"
+      "expo-secure-store",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
