Added tabs and refactor a bit

--- a/turbo.json
+++ b/turbo.json
@@ -14,7 +14,8 @@
                 "^build"
             ],
             "cache": false,
-            "persistent": true
+            "persistent": true,
+            "interactive": true
         },
         "db:generate": {
             "cache": false
