--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -24,8 +24,10 @@
     "@prop-track/database": "workspace:*",
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native/metro-babel-transformer": "^0.79.2",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/bottom-tabs": "^7.3.14",
+    "@react-navigation/drawer": "^7.4.1",
+    "@react-navigation/native": "^7.1.10",
+    "@rn-primitives/menubar": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
     "@tanstack/react-query": "^5.68.0",
     "better-auth": "^1.2.4",
