--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -27,7 +27,11 @@
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/drawer": "^7.4.1",
     "@react-navigation/native": "^7.1.10",
+    "@rn-primitives/label": "^1.2.0",
     "@rn-primitives/menubar": "^1.2.0",
+    "@rn-primitives/portal": "^1.3.0",
+    "@rn-primitives/select": "^1.2.0",
+    "@rn-primitives/separator": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
     "@tanstack/react-query": "^5.68.0",
     "better-auth": "^1.2.4",
@@ -44,6 +48,7 @@
     "expo-haptics": "~14.1.4",
     "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.5",
+    "expo-location": "~18.1.5",
     "expo-router": "~5.0.7",
     "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.8",
@@ -58,7 +63,10 @@
     "react-hook-form": "^7.54.2",
     "react-native": "0.79.2",
     "react-native-css-interop": "^0.1.22",
+    "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.20.1",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
