--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -79,6 +79,7 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "toastify-react-native": "^7.2.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
